samples/_failures_safe/1761195336_52efe6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a2dcfb9.c: In function ‘main’:
./samples/SAFE/__tmp_0a2dcfb9.c:174:12: error: missing terminating " character
  174 |     printf("Sum of first column elements (stack computed): %.3f
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0a2dcfb9.c:174:5: error: expected expression at end of input
  174 |     printf("Sum of first column elements (stack computed): %.3f
      |     ^~~~~~
./samples/SAFE/__tmp_0a2dcfb9.c:174:5: error: expected declaration or statement at end of input
